# glsp-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  diagram-tool-ui.html  package-lock.json  package.json  test-frontend.html  test-inspector.sh  test-mcp-endpoints.sh  test-mcp.sh  test-session.sh  test_compile.sh
glsp-mcp-server/: Cargo.toml
glsp-mcp-server/.claude/: settings.local.json
glsp-mcp-server/diagrams/: New WASM 2025-06-28.glsp.json  New WASM 2025-06-28.glsp.layout.json  New wasm-component Diagram.glsp.json  New wasm-component Diagram.glsp.layout.json  Sample Workflow.glsp.json  Sample Workflow.glsp.layout.json
glsp-mcp-server/docs/: SENSOR_SIMULATION_ARCHITECTURE_REVISED.md  SIMULATION_ARCHITECTURE.md  WASM_GRAPHICS_ARCHITECTURE.md  WASM_GRAPHICS_IMPLEMENTATION.md
glsp-mcp-server/src/: backend.rs  backend_simple.rs  http_server.rs  lib.rs  main.rs  persistence.rs  sse.rs
glsp-mcp-server/src/database/: config.rs  dataset.rs  error.rs  factory.rs  factory_tests.rs  influxdb.rs  mod.rs  models.rs  postgresql.rs  redis.rs  tests.rs  traits.rs
glsp-mcp-server/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs
glsp-mcp-server/src/model/: mod.rs
glsp-mcp-server/src/operations/: mod.rs
glsp-mcp-server/src/selection/: mod.rs
glsp-mcp-server/src/validation/: mod.rs
glsp-mcp-server/src/wasm/: execution_engine.rs  filesystem_watcher.rs  graphics_renderer.rs  mod.rs  pipeline.rs  security_scanner.rs  sensor_bridge.rs  simulation.rs  wit_analyzer.rs
glsp-tauri/src-tauri/: Cargo.toml  tauri.conf.json
glsp-tauri/src-tauri/icons/: icon.icns
glsp-tauri/src-tauri/src/: commands.rs  main.rs  mcp_client.rs  server_adapter.rs
tasklist_mcp_client/: Cargo.toml  README.md  bazel_setup.sh
tasklist_mcp_client/src/: main.rs
workspace/adas-wasm-components/: .gitignore  ADAS_ARCHITECTURE.md  ARCHITECTURE.md  BAZEL-ANALYSIS.md  BAZEL-EXAMPLE-BUILD.bazel  BAZEL-KEY-BENEFITS.md  BAZEL-WASM-RULES-EXAMPLE.bzl  BUILD-FIXES-SUMMARY.md  BUILD.bazel  BUILD_STATUS.md  Cargo.toml  DEBUG_ANALYSIS.md  DEPLOYMENT-PLAN.md  DEVELOPMENT.md  FINAL_REPORT.md  ISSUE_RULES_RUST.md  MODULE.bazel  README-COMPOSITION.md  README.md  RESEARCH-SUMMARY.md  SUCCESS-REPORT.md  WAC-COMPOSITION-SUCCESS.md  WASI-PREVIEW2-ONLY.md  adas-simple.wac  adas-system.wac  adas-working.wac  build-and-run-wasi-nn.sh  build-composed.sh  build-optimized.sh  build-standardized.sh  build.sh  build_summary.sh  clean.sh  create_missing_wit_files.sh  fix-dependencies.sh  fix-profiles.sh  fix_all_exports.sh  orchestrate-pipeline.sh  run-with-wasi-nn.sh  show-component-architecture.sh  (+10 more)
workspace/adas-wasm-components/.claude/: settings.local.json
workspace/adas-wasm-components/adas-build/: BUILD.bazel  Cargo.toml  README.md  adas_component.bzl
workspace/adas-wasm-components/adas-build/src/: lib.rs
workspace/adas-wasm-components/adas-build/wasi-nn/: BUILD.bazel
workspace/adas-wasm-components/component-metadata/: Cargo.toml  build.rs
workspace/adas-wasm-components/component-metadata/src/: lib.rs
workspace/adas-wasm-components/components/ai/: BUILD.bazel
workspace/adas-wasm-components/components/behavior-prediction-ai/: Cargo.toml
workspace/adas-wasm-components/components/can-gateway/: Cargo.toml
workspace/adas-wasm-components/components/computer-vision-ai/: Cargo.toml
workspace/adas-wasm-components/components/control/: BUILD.bazel  Cargo.toml
workspace/adas-wasm-components/components/fusion/: BUILD.bazel
workspace/adas-wasm-components/components/graphics/: BUILD.bazel
workspace/adas-wasm-components/components/input/: BUILD.bazel
workspace/adas-wasm-components/components/integration/: BUILD.bazel
workspace/adas-wasm-components/components/lidar-ecu/: Cargo.toml
workspace/adas-wasm-components/components/localization/: Cargo.toml
workspace/adas-wasm-components/components/object-detection-ai/: Cargo.toml
workspace/adas-wasm-components/components/orchestrator/: BUILD.bazel  Cargo.toml
workspace/adas-wasm-components/components/perception/: Cargo.toml
workspace/adas-wasm-components/components/planning/: Cargo.toml
workspace/adas-wasm-components/components/planning-decision/: Cargo.toml
workspace/adas-wasm-components/components/radar-corner-ecu/: Cargo.toml
workspace/adas-wasm-components/components/safety-monitor/: Cargo.toml
workspace/adas-wasm-components/components/sensor-fusion-ecu/: Cargo.toml
workspace/adas-wasm-components/docs/: ADAS_ARCHITECTURE.md  ASIL-B-IMPLEMENTATION-STATUS.md  ASIL-B-INTERFACE-PROPOSAL.md  COMPLETE-WASI-NN-SETUP-GUIDE.md  COMPONENT_MAPPING.md  TESTING-GUIDE.md  WASI-NN-VERSION-INFO.md
workspace/adas-wasm-components/metadata/: control.toml  localization.toml  perception.toml  planning.toml  sensor-fusion.toml  vehicle-control-ecu.toml
workspace/adas-wasm-components/scripts/: build-components.sh  compose-adas-system.sh  generate-components.sh
workspace/adas-wasm-components/showcase/: Cargo.toml  README.md
workspace/adas-wasm-components/wit/: adas-common-types.wit  adas-domain-controller-standalone.wit  behavior-prediction-ai-standalone.wit  behavior-prediction-ai.wit  camera-front-ecu-standalone.wit  camera-front.wit  camera-surround-ecu-standalone.wit  camera-surround.wit  can-gateway-standalone.wit  computer-vision-ai-standalone.wit  control-standalone.wit  control.wit  deps.toml  feo-demo.wit  hmi-interface-standalone.wit  lidar-ecu-standalone.wit  lidar.wit  localization-complex.wit  localization-standalone.wit  object-detection-ai-standalone.wit  object-detection-ai.wit  perception-fusion-standalone.wit  perception-fusion.wit  perception-standalone.wit  perception.wit  pipeline-orchestrator.wit  planning-decision-standalone.wit  planning-decision.wit  planning-standalone.wit  planning.wit  radar-corner-ecu-standalone.wit  radar-corner.wit  radar-front-ecu-standalone.wit  radar-front.wit  safety-monitor-standalone.wit  sensor-fusion-ecu-standalone.wit  sensor-fusion-standalone.wit  sensor-fusion.wit  test-simple.wit  tracking-prediction-ai-standalone.wit  (+7 more)
workspace/amt/simple/comp-a/: Cargo.toml  (+1 more)
(+455 files in other folders)
