[workspace]
members = [
    "glsp-mcp-server",
    "glsp-tauri/src-tauri",
	#"composer",
    "tasklist_mcp_client"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"

# HTTP and server dependencies
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Additional dependencies
chrono = { version = "0.4", features = ["serde"] }
wasm-tools = "1.0"
wasmparser = "0.118"
wit-component = "0.218"
wit-parser = "0.218"

# Authentication and security dependencies
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5.0"
keyring = "3.0"

# HTTP client dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = "1.0"
hyper-util = "0.1"
http = "1.0"
bytes = "1.0"

# WebSocket dependencies  
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# Rate limiting and middleware
governor = "0.6"
axum-core = "0.4"

# Additional utilities
dashmap = "6.0"
once_cell = "1.0"
parking_lot = "0.12"
validator = "0.18"
futures-util = "0.3"
lru = "0.12"
