[package]
name = "glsp-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# PulseEngine MCP Framework dependencies - using local workspace paths
# Working within the mcp-loxone workspace for dependency resolution
mcp-protocol = { package = "pulseengine-mcp-protocol", path = "../mcp-loxone/loxone-mcp-rust/mcp-framework/mcp-protocol" }
mcp-transport = { package = "pulseengine-mcp-transport", path = "../mcp-loxone/loxone-mcp-rust/mcp-framework/mcp-transport" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# HTTP and server dependencies (still needed for custom code)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# WASM processing
wasm-tools = { workspace = true }
wasmparser = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
chrono = { workspace = true }

# Filesystem watching
notify = "6.1"

# SSE support
axum-extra = { version = "0.9", features = ["typed-header"] }
async-stream = "0.3"
tokio-stream = "0.1"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "glsp_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"