[package]
name = "glsp-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# PulseEngine MCP Framework dependencies from crates.io (0.2.0)
pulseengine-mcp-protocol = "0.2.0"
pulseengine-mcp-transport = "0.2.0"
pulseengine-mcp-server = "0.2.0"

# CLI framework for enhanced developer experience
pulseengine-mcp-cli = "0.2.0"
pulseengine-mcp-cli-derive = "0.2.0"

# Enhanced capabilities for production readiness
pulseengine-mcp-logging = "0.2.0"
pulseengine-mcp-monitoring = "0.2.0"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# HTTP and server dependencies are now provided by the framework

# WASM processing
wasm-tools = { workspace = true }
wasmparser = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
chrono = { workspace = true }

# Filesystem watching
notify = "6.1"

# SSE support is now provided by the framework

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "glsp_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"