[package]
name = "glsp-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# PulseEngine MCP Framework dependencies from crates.io (0.4.4) - with memory auth
pulseengine-mcp-protocol = "0.4.4"
pulseengine-mcp-transport = { version = "0.4.4", default-features = false }
pulseengine-mcp-server = { version = "0.4.4", default-features = false }
pulseengine-mcp-auth = "0.4.4"

# CLI framework for enhanced developer experience
pulseengine-mcp-cli = "0.4.4"
pulseengine-mcp-cli-derive = "0.4.4"

# Enhanced capabilities for production readiness
pulseengine-mcp-logging = "0.4.4"
pulseengine-mcp-monitoring = "0.4.4"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# HTTP and server dependencies are now provided by the framework

# WASM processing
wasm-tools = { workspace = true }
wasmparser = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
chrono = { workspace = true }

# WASM execution
wasmtime = "24.0"

# Filesystem watching
notify = "6.1"

# Graphics rendering dependencies
lru = { workspace = true }
sha2 = { workspace = true }

# Database abstraction dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
influxdb = { version = "0.7", optional = true }
base64 = "0.21"

# SSE support is now provided by the framework

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Direct HTTP server dependencies
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

[lib]
name = "glsp_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["postgresql"]
postgresql = ["sqlx"]
influxdb = ["dep:influxdb"]
redis = ["dep:redis"]
all-databases = ["postgresql", "influxdb", "redis"]