[package]
name = "tasklist_mcp_client"
version = "0.1.0"
edition = "2021"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
amt-compose ={git="https://gitgerrit.asux.aptiv.com/mwd/autosar-migration-toolkit/composer" , branch="main"}
anyhow.workspace = true
