"""Bazel Module for ADAS WebAssembly Components"""

module(
    name = "adas_wasm_components",
    version = "0.1.0",
    compatibility_level = 1,
)

# Use the published rules_wasm_component from GitHub
bazel_dep(name = "rules_wasm_component", version = "0.1.0")

# For now, use git_override since we haven't published to BCR yet
git_override(
    module_name = "rules_wasm_component",
    remote = "https://github.com/pulseengine/rules_wasm_component.git",
    commit = "f151bef",  # Latest commit with macro conflict fix
)

# Configure WASM toolchain to download tools (more reliable)
wasm_toolchain = use_extension("@rules_wasm_component//wasm:extensions.bzl", "wasm_toolchain")
wasm_toolchain.register(
    name = "adas_tools",
    strategy = "download",  # Download prebuilt tools
)
use_repo(wasm_toolchain, "adas_tools_toolchains")

# Use system toolchain for ADAS components
register_toolchains("@adas_tools_toolchains//:wasm_tools_toolchain")