[package]
name = "adas-orchestrator"
version = "0.1.0"
edition = "2021"
description = "ADAS Orchestrator - Coordinates data flow between components"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "adas:orchestrator"

[dependencies]
wit-bindgen = { workspace = true }
# tokio = { version = "1.0", features = ["full"] }  # Disabled for WASM compatibility
# Use WASI-compatible alternatives for async if needed
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }

# Configuration for building WASM components
# Profile configuration inherited from workspace
