[package]
name = "adas-safety_monitor"
version = "0.1.0"
edition = "2021"
description = "ISO 26262 safety monitoring"
license = "Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.33"

# Configuration for building WASM components
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
