"""Simple test component for debugging toolchain"""

load("@rules_wasm_component//wit:defs.bzl", "wit_library")
load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")

package(default_visibility = ["//visibility:public"])

# Simple WIT interface
wit_library(
    name = "simple_wit",
    srcs = ["wit/world.wit"],
    package_name = "test:simple",
)

# Simple Rust component
rust_wasm_component_bindgen(
    name = "simple_component",
    srcs = ["src/lib.rs"],
    wit = ":simple_wit",
    profiles = ["release"],
)